Update Translate btn
Translate button background fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <button id="translate-btn" class="btn">
+    <button id="translate-btn">
         <img id="translate-icon" src="assets/ptbr-flag.png" alt="Language" width="54">
     </button>
 
