--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             class="bi bi-box-arrow-up-right"></i></span></a>
             </p>
 
-            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span>
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-2025</span>
                 <span id="exp04">
                     Analista de
                     CRM na
