--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <div class="col text-center" data-aos="zoom-in">
                 <img width="70" height="70" src="https://img.icons8.com/color/96/react-native.png" alt="ReactJS" />
-                <p>ReactJS</p>
+                <p>React</p>
             </div>
             <div class="col text-center" data-aos="zoom-in">
                 <img width="70" height="70" src="https://img.icons8.com/fluency/96/node-js.png" alt="NodeJS" />
@@ -163,6 +163,10 @@
                         href="https://drive.google.com/file/d/15K-4a7Uixo7L-bV4KhaSlerhxCtfmR0A/view?usp=sharing"
                         target="_blank"><span class="exp-link fs-4" style="font-weight: 700;">YOUTH SPACE <i
                                 class="bi bi-box-arrow-up-right"></i></span> </a></p>
+
+            <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2027</span> <span id="edu05">
+                    Graduação em Inteligência Artificial pela
+                </span> <span class="fs-4" style="color: #a8dacb; font-weight: 700;">PUC-PR </span> </a></p>
         </div>
 
         <!-- EXP PROFISSIONAL -->
@@ -205,7 +209,7 @@
                             class="bi bi-box-arrow-up-right"></i></span></a>
             </p>
 
-            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-2025</span>
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span>
                 <span id="exp04">
                     Analista de
                     CRM na
@@ -317,8 +321,8 @@
                                 Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da
                                 Universidade de Fortaleza. No ano seguinte, em 2021, ele me convidou para trabalhar na
                                 Diretoria de Marketing com o novo CRM da Universidade, pois era preciso alguém com certa
-                                experiência em tecnologia e comunicação, aceitei a proposta e estou até hoje trabalhando
-                                como analista de CRM para captação de novos alunos.
+                                experiência em tecnologia e comunicação, aceitei a proposta e adquiri experiência como
+                                analista de CRM.
                             </p>
                             <p style="margin-bottom: 0;">
                                 Em 2023, decidi por deixar a Pesse e concentrar meus esforços no aprimoramento das
@@ -327,6 +331,12 @@
                                 Atualmente,
                                 mantenho-me completamente focado nessa meta, impulsionado pela determinação e pelo
                                 empenho necessários para alcançá-la.
+                            </p>
+                            <p style="margin-bottom: 0;">
+                                Em 2025, iniciei uma Graduação em Inteligência Artificial com o objetivo de me
+                                especializar na área. Acredito que todo profissional de tecnologia deve adquirir
+                                conhecimentos em IA, uma vez que esta já é uma realidade presente e determinante para o
+                                futuro.
                             </p>
                         </div>
                         <div class="modal-footer">
@@ -444,6 +454,7 @@
                 edu02: "Graphic and Digital Design MBA from",
                 edu03: "Systems Analysis and Development from",
                 edu04: "Fullstack Javascript Developer from",
+                edu05: "Graduation in Artificial Intelligence from",
                 experience: "PROFESSIONAL EXPERIENCE",
                 exp01: "Internship in Information and Communication Technology (ICT) at",
                 exp02: "Scholarship in Information and Communication Technology (ICT) at UNIFOR for",
@@ -513,10 +524,13 @@
                 </p>
 
                 <p>
-                   In 2020, the then coordinator of the Vortex laboratory became the Technology Director of the University of Fortaleza. The following year, in 2021, he invited me to work in the Marketing Department with the University's new CRM, as they needed someone with some experience in technology and communication. I accepted the offer and I am still working as a CRM analyst to recruit new students.
+                   In 2020, the then-coordinator of the Vortex Lab became the Chief Technology Officer at the University of Fortaleza. The following year, in 2021, he invited me to join the University's Marketing Department to work with the new CRM system, as they needed someone with experience in both technology and communication. I accepted the offer and gained valuable experience as a CRM analyst.
+                </p>
+                <p>
+                   In 2023, I decided to leave Pesse and focus my efforts on improving my skills as a developer. I committed to embarking on an intensive study journey with the goal of becoming an exemplary professional in this area. Currently, i remain completely focused on this goal, driven by the determination and commitment needed to achieve it.
                 </p>
                 <p style="margin-bottom: 0;">
-                   In 2023, I decided to leave Pesse and focus my efforts on improving my skills as a developer. I committed to embarking on an intensive study journey with the goal of becoming an exemplary professional in this area. Currently, i remain completely focused on this goal, driven by the determination and commitment needed to achieve it.
+                    In 2025, I began a Bachelor's degree in Artificial Intelligence with the goal of specializing in the field. I believe that every technology professional should gain knowledge in AI, as it is already a present reality and a key driver of the industry's future.
                 </p>
                 
                 `,
@@ -532,6 +546,7 @@
                 edu02: "MBA em Design Gráfico e Digital pela",
                 edu03: "Análise e Desenvolvimento de Sistemas pela",
                 edu04: "Fullstack Javascript Developer pela",
+                edu05: "Graduação em Inteligência Artificial pela",
                 experience: "EXPERIÊNCIA PROFISSIONAL",
                 exp01: "Estágio em Tecnologia da Informação e Comunicação (TIC) no",
                 exp02: "Bolsista em Tecnologia da Informação e Comunicação (TIC) na UNIFOR pela",
@@ -624,19 +639,24 @@
                                 instalados nos veículos.
                             </p>
                             <p>
-                                Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da
+                                 Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da
                                 Universidade de Fortaleza. No ano seguinte, em 2021, ele me convidou para trabalhar na
                                 Diretoria de Marketing com o novo CRM da Universidade, pois era preciso alguém com certa
-                                experiência em tecnologia e comunicação, aceitei a proposta e estou até hoje trabalhando
-                                como analista de CRM para captação de novos alunos.
+                                experiência em tecnologia e comunicação, aceitei a proposta e adquiri experiência como analista de CRM.
                             </p>
-                            <p style="margin-bottom: 0;">
+                            <p>
                                 Em 2023, decidi por deixar a Pesse e concentrar meus esforços no aprimoramento das
                                 minhas habilidades como desenvolvedor. Assumi o compromisso de embarcar em uma jornada
                                 intensiva de estudos com o objetivo de me tornar um profissional exemplar nessa área.
                                 Atualmente,
                                 mantenho-me completamente focado nessa meta, impulsionado pela determinação e pelo
                                 empenho necessários para alcançá-la.
+                            </p>
+                            <p style="margin-bottom: 0;">
+                                Em 2025, iniciei uma Graduação em Inteligência Artificial com o objetivo de me
+                                especializar na área. Acredito que todo profissional de tecnologia deve adquirir
+                                conhecimentos em IA, uma vez que esta já é uma realidade presente e determinante para o
+                                futuro.
                             </p>
                 
                 `,
@@ -667,6 +687,7 @@
             document.querySelector("#edu02").textContent = translations[currentLang].edu02;
             document.querySelector("#edu03").textContent = translations[currentLang].edu03;
             document.querySelector("#edu04").textContent = translations[currentLang].edu04;
+            document.querySelector("#edu05").textContent = translations[currentLang].edu05;
 
 
             // PROFESSIONAL EXPERIENCE
