--- a/index.html
+++ b/index.html
@@ -217,12 +217,19 @@
                             class="bi bi-box-arrow-up-right"></i></span></a>
             </p>
 
-            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span>
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-2025</span>
                 <span id="exp04">
                     Analista de
                     CRM na
                 </span> <a href="https://unifor.br" target="_blank"><span class="exp-link fs-4"
                         style="font-weight: 700;">UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a>
+            </p>
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2025-2025</span>
+                <span id="exp05">
+                    Desenvolvedor Frontend React no
+                </span> <a href="https://vortex.unifor.br/" target="_blank"><span class="exp-link fs-4"
+                        style="font-weight: 700;">VORTEX - UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a>
             </p>
 
         </div>
@@ -469,6 +476,7 @@
                 exp02: "Scholarship in Information and Communication Technology (ICT) at UNIFOR for",
                 exp03: "Entrepreneurial Partner with",
                 exp04: "CRM Analyst at",
+                exp05: "React Frontend Developer at",
                 works: "SOME WORKS",
                 detailedJourney: "DETAILED JOURNEY",
                 detailedJourneyModal: `<b>Detailed Journey</b>`,
@@ -562,6 +570,7 @@
                 exp02: "Bolsista em Tecnologia da Informação e Comunicação (TIC) na UNIFOR pela",
                 exp03: "Sócio Empreendedor com a",
                 exp04: "Analista de CRM na",
+                exp05: "Desenvolvedor Frontend React no",
                 works: "ALGUNS TRABALHOS",
                 detailedJourney: "TRAJETÓRIA DETALHADA",
                 detailedJourneyModal: `<b>Trajetória Detalhada</b>`,
@@ -716,6 +725,7 @@
             document.querySelector("#exp02").textContent = translations[currentLang].exp02;
             document.querySelector("#exp03").textContent = translations[currentLang].exp03;
             document.querySelector("#exp04").textContent = translations[currentLang].exp04;
+            document.querySelector("#exp05").textContent = translations[currentLang].exp05;
 
 
             // JOURNEY
